--- a/index.css
+++ b/index.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap");
 
-*{
+* {
   margin: 0px;
   padding: 0px;
 }
 
 /* shared design */
 
-.text-color-shared{
+.text-color-shared {
   color: rgb(229, 84, 115);
 }
 
-.btn{
+.btn {
   height: 58px;
-  padding: 18px 40px ;
+  padding: 18px 40px;
   margin: 10px 0px;
   color: white;
   cursor: pointer;
@@ -21,42 +21,40 @@
   border-radius: 5px;
   border-style: none;
   font-family: Lato;
-  font-size: 16px; 
+  font-size: 16px;
   font-weight: 600;
-  
 }
-.title-shared{
+.title-shared {
   color: rgb(39, 39, 39);
   font-family: Lato;
   font-size: 40px;
-  font-weight: 800; 
+  font-weight: 800;
 }
 
-.description-shared{
+.description-shared {
   padding: 15px 0px;
-  color: rgba(39, 39, 39, 0.50);
+  color: rgba(39, 39, 39, 0.5);
   font-family: Lato;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
-  line-height: 30px; 
+  line-height: 30px;
 }
 
 /* banner section */
 
-.banner-container{
+.banner-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: rgba(229, 84, 115, 0.1);
-  padding: 30px 140px 0px ;
+  padding: 30px 140px 0px;
   /* width; */
 }
 
-
-.title-banner{
+.title-banner {
   max-width: 520px;
-  color: rgba(39, 39, 39,1);
+  color: rgba(39, 39, 39, 1);
   font-family: Lato;
   font-size: 60px;
   font-style: normal;
@@ -64,103 +62,102 @@
   line-height: normal;
 }
 
-.banner-description{
+.banner-description {
   max-width: 500px;
 }
 
-.banner-photo{
+.banner-photo {
   width: 570px;
   height: 730px;
   padding: 0px 10px;
 }
 
-.flower{
+.flower {
   width: 570px;
   height: 730px;
 }
 
 /* featured flower section */
 
-.feature-title{
+.feature-title {
   text-align: center;
   padding: 150px 300px 1px;
 }
 
-.feature-description{
+.feature-description {
   height: 100px;
   max-width: 550px;
   margin: auto;
-  padding: 5px; 
+  padding: 5px;
   text-align: center;
 }
 
-.feature-box-container{
+.feature-box-container {
   display: flex;
   justify-content: space-around;
-  align-items: center ;
+  align-items: center;
   padding: 30px 220px 150px;
-
 }
 
-.feature-box{
+.feature-box {
   margin: 1px;
-  text-align: center ;
+  text-align: center;
   width: 464px;
   height: 528px;
   flex-shrink: 0;
   border-radius: 300px 300px 0px 0px;
 }
 
-.box-background-1{
+.box-background-1 {
   background: rgba(167, 33, 98, 0.15);
 }
 
-.box-background-2{
+.box-background-2 {
   background: rgba(5, 151, 160, 0.15);
 }
 
-.box-background-3{
+.box-background-3 {
   background: rgba(71, 125, 17, 0.15);
 }
 
-.feature-photo{
+.feature-photo {
   text-align: center;
   /* padding: 100px 75px 0px; */
 }
 
-.feature-image-1{
+.feature-image-1 {
   width: 310px;
   height: 428px;
   padding: 100px 75px 0px;
 }
 
-.feature-image-2{
+.feature-image-2 {
   width: 370px;
   height: 370px;
   padding: 130px 95px 30px 60px;
 }
 
-.feature-image-3{
+.feature-image-3 {
   width: 310px;
   height: 470px;
   padding: 58px 75px 0px;
 }
 
-.feature-link{
+.feature-link {
   padding: 32px;
 }
 
-.link-text{
+.link-text {
   color: rgb(39, 39, 39);
   text-align: center;
   font-family: Lato;
   font-size: 20px;
-  font-weight: 900; 
+  font-weight: 900;
 }
 
 /* delivery supply and support section */
 
-.delivery-support-container{
+.delivery-support-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -172,21 +169,21 @@
   background: rgba(39, 39, 39, 0.05);
 }
 
-.delivery-support-box{
+.delivery-support-box {
   padding: 5px 50px;
 }
 
-.delivery-support-image{
+.delivery-support-image {
   /* text-align: center; */
   padding: 15px;
 }
 
-.delivery-support-logo{
+.delivery-support-logo {
   text-align: center;
 }
 
-.delivery-support-name{
-  color: rgba(39, 39, 39, 0.80);
+.delivery-support-name {
+  color: rgba(39, 39, 39, 0.8);
   /* text-align: center; */
   font-family: Lato;
   font-size: 20px;
@@ -196,7 +193,7 @@
 
 /* sales and deals section */
 
-.sale-container{
+.sale-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -206,26 +203,26 @@
   background: rgba(229, 84, 115, 0.05);
 }
 
-.sale-text{
+.sale-text {
   text-align: center;
   width: 550px;
   margin-left: 340px;
 }
 
-.deal-photo{
+.deal-photo {
   margin-right: 320px;
   padding: 5px;
 }
 
 /* social media section */
 
-.social-text{
+.social-text {
   text-align: center;
   margin: 100px 600px 40px;
   padding: 5px 70px;
 }
 
-.social-box{
+.social-box {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -234,49 +231,49 @@
 
 /* subscription section  */
 
-.subscription-container{
+.subscription-container {
   width: 1440px;
   height: 449px;
-  border-radius: 8px; 
+  border-radius: 8px;
   margin: 100px 230px;
   background-image: url("./Flower\ Asset/Rectangle 9.png");
   background-repeat: no-repeat;
 }
 
-.subscription-box{
+.subscription-box {
   text-align: center;
 }
 
-.subscription-text{
+.subscription-text {
   padding: 120px 500px 30px;
 }
 
-.subscription-email{
+.subscription-email {
   text-align: center;
 }
 
-input[type="email"]{
+input[type="email"] {
   width: 670px;
   height: 58px;
   border-style: none;
   border-radius: 8px;
   background: rgb(255, 255, 255);
-  padding: 0px 20px ;
+  padding: 0px 20px;
   font-family: Lato;
-  font-size: 16px; 
+  font-size: 16px;
   font-weight: 600;
   /* margin: 10px 0px; */
 }
 
 /* customer feedback section  */
 
-.feedback-title{
+.feedback-title {
   text-align: center;
   margin: 100px 600px 40px;
   padding: 5px 70px;
 }
 
-.feedback-box{
+.feedback-box {
   display: flex;
   justify-content: center;
   margin: 10px 220px;
@@ -284,11 +281,11 @@ input[type="email"]{
   background-color: rgba(229, 84, 115, 0.1);
 }
 
-.feedback-text-box{
+.feedback-text-box {
   padding: 20px;
 }
 
-.customer-name{
+.customer-name {
   text-align: center;
   color: rgb(229, 84, 115);
   font-family: Lato;
@@ -296,14 +293,14 @@ input[type="email"]{
   font-weight: 800;
 }
 
-.customer-feedback{
+.customer-feedback {
   width: 400px;
   text-align: justify;
   margin: 5px;
   padding: 25px;
 }
 
-.feedback-button{
+.feedback-button {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -312,7 +309,7 @@ input[type="email"]{
 
 /* footer section */
 
-.footer-container{
+.footer-container {
   width: 1920px;
   height: 180px;
   text-align: center;
@@ -320,14 +317,14 @@ input[type="email"]{
   background-color: rgb(17, 16, 16);
 }
 
-.footer-title{
+.footer-title {
   color: rgb(255, 255, 255);
 }
 
-.foot-description{
-  color: rgba(255, 255, 255, 0.90);
+.foot-description {
+  color: rgba(255, 255, 255, 0.9);
 }
 
-.copyright-text{
-  color: rgba(255, 255, 255, 0.40);
+.copyright-text {
+  color: rgba(255, 255, 255, 0.4);
 }
