Remove unnecessary semi-colons.

--- a/index.css
+++ b/index.css
@@ -125,15 +125,15 @@
 }
 
 .flower-image-1 {
-  padding: 98px 75px 0px;;
+  padding: 98px 75px 0px;
 }
 
 .flower-image-2 {
-  padding: 120px 75px 40px 50px;;
+  padding: 120px 75px 40px 50px;
 }
 
 .flower-image-3 {
-  padding: 54px 75px 0px;;
+  padding: 54px 75px 0px;
 }
 
 .feature-link {
